@@ -15,29 +15,23 @@ import java.util.logging.Logger;
 import net.nnwsf.configuration.Server;
 import net.nnwsf.configuration.ServerConfiguration;
 
-public class Reflection {
+public class ReflectionHelper {
 
-    private static Logger log = Logger.getLogger(Reflection.class.getName());
+    private static Logger log = Logger.getLogger(ReflectionHelper.class.getName());
 
-    private static Reflection instance = new Reflection();
-
-    public static Reflection getInstance() {
-        return instance;
-    }
-
-    public ServerConfiguration getConfiguration(Class<?> aClass) {
+    public static ServerConfiguration getConfiguration(Class<?> aClass) {
         Server annotation = findAnnotation(aClass, Server.class);
         if(annotation == null) {
             throw new RuntimeException("No configuration provided");
         }
         try {
-            return annotation.value().newInstance();
+            return annotation.value().getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException("Invalid configuration", e);
         }
     }
 
-    public Map<Annotation, Collection<Method>> findAnnotationMethods(Class<?> aClass, Class<?>... annotationClasses) {
+    public static Map<Annotation, Collection<Method>> findAnnotationMethods(Class<?> aClass, Class<?>... annotationClasses) {
         Map<Annotation, Collection<Method>> annotationMethodMap = new HashMap<>();
         Method[] methods = aClass.getMethods();
         for(Method method : methods) {
@@ -58,9 +52,9 @@ public class Reflection {
         return annotationMethodMap;
     }
 
-    public Collection<Field> findAnnotationFields(Class<?> aClass, Class<?> annotationClass) {
+    public static Collection<Field> findAnnotationFields(Class<?> aClass, Class<?> annotationClass) {
         Collection<Field> annotatedFields = new ArrayList<>();
-        Collection<Class<?>> classes = Reflection.getAllClassesAndInterfaces(aClass, ClassDiscovery.getPackagesToScan());
+        Collection<Class<?>> classes = ReflectionHelper.getAllClassesAndInterfaces(aClass, ClassDiscovery.getPackagesToScan());
         for(Class<?> aClassToCheck : classes) {
             Field[] fields = aClassToCheck.getDeclaredFields();
             for(Field field : fields) {
@@ -76,7 +70,7 @@ public class Reflection {
         return annotatedFields;
     }
 
-    public <T extends Annotation> T findAnnotation(Class<?> aClass, Class<T> annotationClass) {
+    public static <T extends Annotation> T findAnnotation(Class<?> aClass, Class<T> annotationClass) {
         if(Object.class.equals(aClass)) {
             return null;
         }
@@ -96,7 +90,7 @@ public class Reflection {
         return findAnnotation(aClass.getSuperclass(), annotationClass);
     }
 
-    public <T extends Annotation> T findAnnotation(Method method, Class<T> annotationClass) {
+    public static <T extends Annotation> T findAnnotation(Method method, Class<T> annotationClass) {
         T annotation = method.getAnnotation(annotationClass);
         if(annotation != null) {
             return annotation;
@@ -104,23 +98,23 @@ public class Reflection {
         return null;
     }
 
-    public <T extends Annotation> Collection<T> findAnnotations(Class<?> aClass, Class<T> annotationClass) {
+    public static <T extends Annotation> Collection<T> findAnnotations(Class<?> aClass, Class<T> annotationClass) {
         Collection<T> foundAnnotations = new ArrayList<>();
         Annotation[] annotations = aClass.getAnnotations();
         for(Annotation annotation : annotations) {
             if(annotation.annotationType().isAssignableFrom(annotationClass)) {
-                foundAnnotations.add((T)annotation);
+                foundAnnotations.add(annotationClass.cast(annotation));
             }
         }
         return foundAnnotations;
     }
 
-    public <T> Collection<T> getInstances(Collection<Class<T>> classes) {
+    public static <T> Collection<T> getInstances(Collection<Class<T>> classes) {
         Collection<T> instances = new ArrayList<>();
         if(classes != null) {
             for (Class<T> aClass : classes) {
                 try {
-                    instances.add(aClass.newInstance());
+                    instances.add(aClass.getConstructor().newInstance());
                 } catch(Exception e) {
                     log.log(Level.SEVERE, "Unable to create instance of " + aClass);
                 }
@@ -129,9 +123,9 @@ public class Reflection {
         return instances;
     }
 
-    public String getValue(Annotation methodAnnotation, String value) {
+    public static String getValue(Annotation methodAnnotation, String value) {
         try {
-            return (String)methodAnnotation.getClass().getMethod(value, new Class[0]).invoke(methodAnnotation, new Object[0]);
+            return (String)methodAnnotation.getClass().getMethod(value).invoke(methodAnnotation);
         } catch(Exception e) {
             throw new RuntimeException("Unable to get value from annotation " + methodAnnotation, e);
         }
